# fridge-api

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fridge_api/: dtos.py  prompt.py  vertex_ai.py
fridge_cleaner/: dtos.py  prompt.py  utils.py  vertex_ai.py
